# vocabnotify

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.status  configure  configure.ac  libtool  vocabnotify.desktop  vocabnotify.desktop.in
Debug/: Makefile  config.status  libtool
Debug/pixmaps/: Makefile
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  vocabnotify
Debug/src/.deps/: callbacks.Po  database.Po  gui.Po  notifier.Po  setting_manager.Po  threads.Po  vocabmanager.Po  vocabnotify.Po  wni.Po  xfsm-fadeout.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
pixmaps/: Makefile  Makefile.am  Makefile.in
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  a.out  callbacks.c  callbacks.c~  callbacks.h  database.c  database.c~  db  dbtest  dbtest.c  dbtest2.c  gui.c  gui.c~  gui.h  gui.h~  name.db  notifier.c  notifier.c~  notifier.h  notifier.h~  setting_manager.c~  setting_manager.h  threads.c  threads.c~  threads.h  vocabmanager.c~  vocabmanager.h  vocabnotify.c  vocabnotify.c~  vocabnotify.h  vocabnotify.h~  vocabnotify.ui  vocabnotify.ui~  xfsm-fadeout.c
src/.deps/: callbacks.Po  gui.Po  notifier.Po  setting_manager.Po  threads.Po  vocabmanager.Po  vocabnotify.Po  wni.Po  xfsm-fadeout.Po
